<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ashclean.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginWelcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/green"
        android:textSize="50dp"
        tools:text="@string/loginWelcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginWelcomeSub"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="#7f9ac6"
        android:textSize="15dp"
        android:layout_marginVertical="15dp"
        tools:text="@string/loginWelcome" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">


        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/green"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Do not have an account?"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="#7f9ac6"
        android:textSize="15dp"

        tools:text="Do not have an account?" />

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="registerNewUser"
        android:text="@string/action_register"
        android:textColor="@color/green"
        android:textStyle="bold" />

</LinearLayout>
