<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.ashclean.RegisterActivity"
              android:gravity="center">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Register here"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="30dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            >

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_username"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textIsSelectable="false"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            >

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColor="@color/black"

                android:imeOptions="actionNext"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textIsSelectable="false"
                />

        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

             />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            >

            <EditText
                android:id="@+id/register_confirm_password"
                android:textColor="@color/black"

                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@integer/register_form_finished"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/adminCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Are you an Admin?"
        android:checked="false"/>

    <Button
            android:id="@+id/register_sign_up_button"
            style="?android:textAppearanceMedium"
            android:background="@color/white"
            android:textColor="@color/green"
            android:onClick="signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            />




</LinearLayout>
